# adas_perception_simulation

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  README.md
docs/: ADAS_FUNCTIONS.md  ARCHITECTURE.md  GETTING_STARTED.md  PYTHON_TOOLING.md
include/common/: logger.hpp  math_utils.hpp  types.hpp
include/inference/: onnx_runner.hpp
include/perception/: lane_detector.hpp  object_detector.hpp  sensor_fusion.hpp
include/planning/: adas_controllers.hpp
include/prediction/: trajectory_predictor.hpp
include/tracking/: hungarian.hpp  multi_object_tracker.hpp
python/: requirements.txt
python/eval/: evaluate_adas.py
python/model_export/: export_to_onnx.py  quantize_model.py
python/training/: dataset.py  train_detector.py
python/visualization/: adas_visualizer.py
scripts/: build.sh  run_demo.sh
src/: main.cpp
src/common/: logger.cpp
src/cuda/: nms_kernel.cu  preprocess_kernel.cu
src/inference/: onnx_runner.cpp  tensorrt_runner.cpp
src/perception/: lane_detector.cpp  object_detector.cpp  sensor_fusion.cpp
src/planning/: acc_controller.cpp  aeb_controller.cpp  lane_keeping_assist.cpp  traffic_light_handler.cpp
src/prediction/: trajectory_predictor.cpp
src/tracking/: hungarian.cpp  kalman_filter.cpp  multi_object_tracker.cpp
tests/: CMakeLists.txt  test_acc_controller.cpp  test_aeb_controller.cpp  test_lka_predictor.cpp  test_math_utils.cpp  test_sensor_fusion.cpp  test_tracker.cpp
